# svae_test

./: .cruft.json  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
docs/: api.md  conf.py  contributing.md  template_usage.md
docs/notebooks/: example.ipynb
src/svae_test/: __init__.py
tests/: test_basic.py
